Opened summarize text route
