# src/swagger.json
@@ -112,6 +112,57 @@
                 }
             }
         },
+        "/summarizeText": {
+            "post": {
+                "tags": [
+                    "chat"
+                ],
+                "summary": "Summarize text using OpenAI service",
+                "description": "This endpoint summarizes text using the OpenAI service.",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "title": {
+                                    "type": "string",
+                                    "description": "Title of the summarized text"
+                                },
+                                "text": {
+                                    "type": "string",
+                                    "description": "Summarized text"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": {
+                                    "type": "string",
+                                    "description": "Description of the error"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": {
+                                    "type": "string",
+                                    "description": "Description of the error"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/mix": {
             "post": {
                 "tags": [
@@ -138,7 +189,6 @@
                                             "type": "string"
                                         }
                                     }
-
                                 },
                                 "convertedLecture": {
                                     "type": "object",
@@ -368,192 +418,192 @@
         },
         "/readPdf": {
             "post": {
-              "tags": [
-                "file"
-              ],
-              "summary": "Read a PDF file",
-              "description": "Read a PDF file uploaded as form data",
-              "operationId": "readPdf",
-              "consumes": [
-                "multipart/form-data"
-              ],
-              "produces": [
-                "application/json"
-              ],
-              "parameters": [
-                {
-                  "in": "formData",
-                  "name": "title",
-                  "description": "Title of the PDF file",
-                  "required": true,
-                  "type": "string"
-                },
-                {
-                  "in": "formData",
-                  "name": "pdf",
-                  "description": "PDF file to be uploaded",
-                  "required": true,
-                  "type": "file"
-                }
-              ],
-              "responses": {
-                "200": {
-                  "description": "PDF file read successfully",
-                  "schema": {
-                    "type": "object",
-                    "properties": {
-                      "message": {
+                "tags": [
+                    "file"
+                ],
+                "summary": "Read a PDF file",
+                "description": "Read a PDF file uploaded as form data",
+                "operationId": "readPdf",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "in": "formData",
+                        "name": "title",
+                        "description": "Title of the PDF file",
+                        "required": true,
                         "type": "string"
-                      },
-                      "file": {
-                        "type": "object",
-                        "properties": {
-                          "title": {
-                            "type": "string"
-                          },
-                          "text": {
-                            "type": "string"
-                          },
-                          "createdAt": {
-                            "type": "string",
-                            "format": "date-time"
-                          }
+                    },
+                    {
+                        "in": "formData",
+                        "name": "pdf",
+                        "description": "PDF file to be uploaded",
+                        "required": true,
+                        "type": "file"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "PDF file read successfully",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": {
+                                    "type": "string"
+                                },
+                                "file": {
+                                    "type": "object",
+                                    "properties": {
+                                        "title": {
+                                            "type": "string"
+                                        },
+                                        "text": {
+                                            "type": "string"
+                                        },
+                                        "createdAt": {
+                                            "type": "string",
+                                            "format": "date-time"
+                                        }
+                                    }
+                                }
+                            }
                         }
-                      }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": {
+                                    "type": "string"
+                                }
+                            }
+                        }
                     }
-                  }
-                },
-                "500": {
-                  "description": "Internal server error",
-                  "schema": {
-                    "type": "object",
-                    "properties": {
-                      "message": {
-                        "type": "string"
-                      }
-                    }
-                  }
                 }
-              }
             }
         },
         "/files": {
             "get": {
-              "tags": [
-                "files"
-              ],
-              "summary": "Get all files",
-              "description": "Get a list of all files",
-              "operationId": "getAllFiles",
-              "produces": [
-                "application/json"
-              ],
-              "responses": {
-                "200": {
-                  "description": "List of files",
-                  "schema": {
-                    "type": "array",
-                    "items": {
-                      "$ref": "#/definitions/File"
+                "tags": [
+                    "files"
+                ],
+                "summary": "Get all files",
+                "description": "Get a list of all files",
+                "operationId": "getAllFiles",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of files",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/File"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": {
+                                    "type": "string"
+                                }
+                            }
+                        }
                     }
-                  }
-                },
-                "500": {
-                  "description": "Internal server error",
-                  "schema": {
-                    "type": "object",
-                    "properties": {
-                      "message": {
-                        "type": "string"
-                      }
-                    }
-                  }
                 }
-              }
             }
         },
         "/files/{id}": {
             "get": {
-              "tags": [
-                "files"
-              ],
-              "summary": "Get file by ID",
-              "description": "Get a file by its ID",
-              "operationId": "getFileById",
-              "parameters": [
-                {
-                  "name": "id",
-                  "in": "path",
-                  "description": "ID of the file",
-                  "required": true,
-                  "type": "string"
-                }
-              ],
-              "produces": [
-                "application/json"
-              ],
-              "responses": {
-                "200": {
-                  "description": "File found",
-                  "schema": {
-                    "$ref": "#/definitions/File"
-                  }
-                },
-                "404": {
-                  "description": "File not found"
-                },
-                "500": {
-                  "description": "Internal server error",
-                  "schema": {
-                    "type": "object",
-                    "properties": {
-                      "message": {
+                "tags": [
+                    "files"
+                ],
+                "summary": "Get file by ID",
+                "description": "Get a file by its ID",
+                "operationId": "getFileById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the file",
+                        "required": true,
                         "type": "string"
-                      }
                     }
-                  }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "File found",
+                        "schema": {
+                            "$ref": "#/definitions/File"
+                        }
+                    },
+                    "404": {
+                        "description": "File not found"
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
                 }
-              }
             }
         },
         "/file/{id}": {
             "delete": {
                 "tags": [
-                  "files"
+                    "files"
                 ],
                 "summary": "Delete file by ID",
                 "description": "Delete a file by its ID",
                 "operationId": "deleteFileById",
                 "parameters": [
-                  {
-                    "name": "id",
-                    "in": "path",
-                    "description": "ID of the file",
-                    "required": true,
-                    "type": "string"
-                  }
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the file",
+                        "required": true,
+                        "type": "string"
+                    }
                 ],
                 "responses": {
-                  "200": {
-                    "description": "File deleted successfully"
-                  },
-                  "404": {
-                    "description": "File not found"
-                  },
-                  "500": {
-                    "description": "Internal server error",
-                    "schema": {
-                      "type": "object",
-                      "properties": {
-                        "message": {
-                          "type": "string"
+                    "200": {
+                        "description": "File deleted successfully"
+                    },
+                    "404": {
+                        "description": "File not found"
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "message": {
+                                    "type": "string"
+                                }
+                            }
                         }
-                      }
                     }
-                  }
                 }
-              }
-        },          
+            }
+        },
         "/users": {
             "post": {
                 "tags": [
